# py12box

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  README_TUTORIAL.md  core.py  environment.yml  index.ipynb  index_widgets_test.ipynb  meta.yaml  py12box_run.ipnb  pyproject.toml  requirements.txt  setup.py  util.py
data/example/CFC-11/: CFC-11_emissions.csv
data/example/HFC-134a/: HFC-134a_emissions.csv
data/example/SF6/: SF6_emissions.csv
docs/: doc_F_equation.txt  requirements.txt
docs/source/: README.txt  conf.py  index.rst  install.rst  modules.rst  py12box.rst
example/: emissions.csv
example/CFC-11_example/: CFC-11_lifetime.csv
example/HFC-134a_example/: HFC-134a_initial_conditions.csv  HFC-134a_lifetime.csv
inputs/: species_info.csv  transport.npz
notebooks/: getting_started.ipynb  index.ipynb
parameter_tune/: box_model_transport_mozart_output.py  box_model_transport_tune.py
parameter_tune/parameter_tune_data/CO2_2015/: CO2_emissions.csv
py12box/: __init__.py  core.py  model.py  startup.py  util.py
py12box/data/example/CFC-11/: CFC-11_emissions.csv  CFC-11_initial_conditions.csv  CFC-11_lifetime.csv
py12box/data/example/CFC-11_nolifetime/: CFC-11_emissions.csv  CFC-11_initial_conditions.csv
py12box/data/example/CHCl3/: CHCl3_emissions.csv
py12box/data/example/HFC-134a/: HFC-134a_emissions.csv
py12box/data/inputs/: OH.npy  lifetimes.csv  species_info.csv  strat_invlifetime_relative.npy  temperature.npy
recipes/: README.md  meta.yaml
tests/: test_data.py  test_inputs.py  test_model.py  test_setup.py
(+2 files in other folders)
