[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py12box"
version = "0.2.2"
authors = [
  { name="Matt Rigby", email="matt.rigby@bristol.ac.uk" },
]
description = "AGAGE 12-box model"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
    "pandas",
    "numba==0.55.*",
    "scipy",
]

[tool.setuptools]
packages = ["py12box"]

[project.urls]
"Homepage" = "https://github.com/mrghg/py12box"
"Bug Tracker" = "https://github.com/mrghg/py12box/issues"